ts-tests if overflow bug is fixed

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -35,11 +35,12 @@ color: white;
     background-repeat: no-repeat;
     background-size: cover; */
     position: relative;
-    width: 1516px;
+    width: 100%;
     height: 1058px;
     
     background: #0B0917;
     height:140vh;
+  
 }
 .github{
     position: absolute;
