--- a/src/app/components/forms/forms.component.css
+++ b/src/app/components/forms/forms.component.css
@@ -73,7 +73,7 @@ h3{color:white;
 }
 .blue{
     position: relative;
-width: 1516px;
+width: 100%;
 height: 1500px;
 top:80px;
 background: #0B0917;
